testsets/sanity_checks/stderr/test-smallprint.stderr
llc: error: llc: testsets/sanity_checks/llvm/test-smallprint.ll:38:9: error: stored value and pointer type do not match
  store i32 %printc, i8** %if-res-ptr, align 4
        ^
